syntax = "proto3";

option go_package = "github.com/bd878/gallery/server/search/internal/controller/distributed";

message AppendCommand {
	int64   id = 1;
	int64   user_id = 2;
	string  text = 3;
	string  name = 4;
	bool    private = 5;
	string  title = 6;
}

message UpdateCommand {
	int64   id = 1;
	int64   user_id = 2;
	string  text = 3;
	string  name = 4;
	int32   private = 5;
	string  title = 6;
}

message DeleteCommand {
	int64   id = 1;
	int64   user_id = 2;
}

message PublishCommand {
	repeated int64   ids = 1;
	int64   user_id = 2;
}

message PrivateCommand {
	repeated int64 ids = 1;
	int64   user_id = 2;
}
